--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -24,8 +24,8 @@
 			
 			<vbox hflex="20" pack="center" >
 				<hbox hflex="1" >
-					<vbox hflex="1">
-						<headline label="${c:l('txt.ui.menu.application')}" menuSelected="menu_applicationToClub" />
+					<vbox hflex="3">
+						<headline label="${vm.pageHeadline}" menuSelected="menu_applicationToClub" />
 					</vbox>
 					<vbox hflex="1" vflex="1" align="end" pack="center">
 						<button onClick="@command('backCmd')" 
