--- a/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/kurz.zul
@@ -133,16 +133,14 @@
 						            <auxheader class="header" colspan="3" >
 						            	<hbox hflex="1" height="42px" align="center" >
 							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-						            			<hbox>
-							            			<vbox>
-							            				<label value="${c:l('txt.ui.common.participants')}" />
-													</vbox>
+						            			<hbox vflex="1" align="center">
+						            				<label value="${c:l('txt.ui.common.participants')}" />
+						            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" style="margin-left: 10px;" />
 						            			</hbox>
 						            		</vbox>
 						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
 						            			<hbox>
 <!-- 						            				<button tooltiptext="${c:l('txt.ui.common.remove')}" sclass="btn-danger" iconSclass="z-icon-minus" onClick="@command('courseParticipantsDeleteCmd')" /> -->
-						            				<button tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" popup="addCourseParticipantsFromApplicationPopup" />
 						            				<menupopup id="addCourseParticipantsFromApplicationPopup" >
 														<menuitem label="Z přihlášky" onClick="@command('addCourseParticipantsFromApplicationCmd')" />
 														<menuitem label="Z Kurzu" onClick="@command('addCourseParticipantsFromCourseCmd')" />
@@ -193,15 +191,13 @@
 						            <auxheader class="header" colspan="3" >
 						            	<hbox hflex="1" height="42px" align="center" >
 							            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-						            			<hbox>
-							            			<vbox>
-							            				<label value="${c:l('txt.ui.common.lessons')}" />
-													</vbox>
+						            			<hbox vflex="1" align="center">
+						            				<label value="${c:l('txt.ui.common.lessons')}" />
+						            				<button onClick="@command('newLessonCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" style="margin-left: 10px;" />
 						            			</hbox>
 						            		</vbox>
 						            		<vbox hflex="1" vflex="1" align="end" pack="center" >
 						            			<hbox>
-						            				<button onClick="@command('newLessonCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 												</hbox>
 											</vbox>
 										</hbox>
