--- a/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/seznam-kurzu.zul
@@ -34,15 +34,13 @@
 			            <auxheader class="header" colspan="6" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox>
-				            			<vbox>
-				            				<label value="${c:l('txt.ui.menu.courseList')}" />
-										</vbox>
+			            			<hbox vflex="1" align="center">
+			            				<label value="${c:l('txt.ui.menu.courseList')}" />
+			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" style="margin-left: 10px;" />
 			            			</hbox>
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" >
 			            			<hbox>
-			            				<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" sclass="btn-warning" iconSclass="z-icon-plus" />
 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
