--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-ucastniku.zul
@@ -46,8 +46,19 @@
 										</vbox>
 			            			</hbox>
 			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
+			            		<vbox vflex="1" pack="center" align="center" width="250px" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
+			            				<!-- Nova zprava zobrazenym ucastnikum -->
+			            				<button label="${c:l('txt.ui.common.NovaZprava')}" 
+				            				iconSclass="z-icon-paper-plane" 
+				            				style="margin-right: 5px;"
+				            				visible="${vm.isLoggedUserInRole('ADMIN')}"
+				            				onClick="@command('openModalToSendEmailCmd')"
+				            				sclass="btn-warning"  />		            			
+			            			</hbox>
+			            		</vbox>
+			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
+			            			<hbox vflex="1" pack="center" align="center">	
 			            				<!-- Rocnik -->
 			            				<include src="/pages/common/component/context-year.zul"/>
 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseApplicationList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
