--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/seznam-ucastniku.zul
@@ -72,13 +72,32 @@
 			                <listcell label="${each.personalNo}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.healthInsurance}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell>
+			                	<!-- Prihlasit na konkretni kurz -->
 			                	<button label="@load(vm.newCourseApplicationButtonText)" 
 			                		tooltiptext="@load(vm.newCourseApplicationButtonTooltipText)"
 									sclass="btn-warning" iconSclass="z-icon-file-text"
+									popup="${each.uuid}_newCourseLoginPopup, position=after_end"
+									visible="@load(vm.newCourseApplicationAllowed(each))"
+									if="${vm.courseSelectionRequired}" />
+								<!-- Prihlasit na dalsi rocnik bez vyberu kurzu -->
+								<button label="@load(vm.newCourseApplicationButtonText)" 
+			                		tooltiptext="@load(vm.newCourseApplicationButtonTooltipText)"
+									sclass="btn-warning" iconSclass="z-icon-file-text"
 									onClick="@command('createNewCourseApplicationCmd', uuid=each.uuid)"
-									visible="@load(vm.newCourseApplicationAllowed(each))" />
+									visible="@load(vm.newCourseApplicationAllowed(each))"
+									if="${!vm.courseSelectionRequired}" />
+								<popup id="${each.uuid}_newCourseLoginPopup">
+									<!-- Ucastnik -->
+									<include src="/pages/common/component/course-selection-grid.zul" />
+									
+									<hbox style="margin-bottom: 5px;margin-left: 10px;" hflex="1" pack="center" >
+										<button label="Odeslat" onClick="@command('logToCourseCmd', courseParticipant=each, popup=newParticipantPopup)" iconSclass="z-icon-check" />
+									</hbox>
+								</popup>
+<!-- 			                		iconSclass="z-icon-pencil"  -->
 			                	<button tooltiptext="${c:l('txt.ui.common.detail')}"
-			                		iconSclass="z-icon-pencil" hflex="min" width="20px"
+			                		label="Detail" 
+			                		hflex="min"
 			                		onClick="@command('detailCmd', uuid=each.uuid)" />
 			                </listcell>
 			            </listitem>
@@ -87,103 +106,7 @@
 			    
 			    <popup id="newParticipantPopup">
 					<!-- Ucastnik -->
-					<grid width="550px" sclass="form-grid" style="border: none;" if="${vm.courseSelectionRequired}" >
-						<columns>
-			                <column align="left" hflex="1" />
-			            </columns>
-			            <auxhead>
-			            	<auxheader colspan="2" style="background: #428CCD;">
-			            		<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-			            			<hbox hflex="1" height="28px" align="center" >
-						            	<vbox hflex="min" vflex="1" sclass="header-div" pack="center" >
-					            			<hbox vflex="1" align="center">
-					            				<label value="${c:l('txt.ui.common.CourseSelection')}"/>
-					            			</hbox>
-					            		</vbox>
-									</hbox>
-			            		</vbox>
-			            	</auxheader>
-			            </auxhead>
-			            
-						<rows style="background: white;" >
-							<row sclass="form-grid-row" 
-								style="border: none; padding: 10px 20px 20px 20px;">
-								<cell sclass="form-grid-cell" >
-									<vbox hflex="1">
-										<label value="${c:l('txt.ui.common.SelectCourseLocation')}"/>
-										<!-- Vyber mista konani kurzu -->
-										<combobox model="@init(vm.courseLocationList)"
-											onSelect="@command('courseLocationSelectCmd')"
-											selectedItem="@bind(vm.courseLocationSelected)"
-											placeholder="${c:l('txt.ui.common.courseLocation2')}"
-											style="background: white;"
-											focus="${vm.courseSelectionRequired}"
-											hflex="1"
-											readonly="true" >
-											<template name="model">
-								            	<comboitem label="${each.name}"/>
-											</template>
-										</combobox>
-									</vbox>
-								</cell>
-							</row>
-							<row sclass="form-grid-row" 
-								style="border: none; padding: 0px 20px 20px 20px;"
-								visible="@load(vm.courseList ne null and vm.courseList.isEmpty())" >
-								<!-- Nenalezen zadky kurz -->
-								<cell sclass="form-grid-cell" >
-									<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
-								</cell>
-							</row>		
-							<row sclass="form-grid-row" visible="@load(!empty(vm.courseList))" style="border: none; padding: 0px 20px 20px 20px;" >
-								<!-- Vyber kurzu -->
-								<cell sclass="form-grid-cell">
-									<vbox hflex="1">
-										<label value="${c:l('txt.ui.common.SelectCourse')}"/>	
-										<listbox model="@load(vm.courseList)" 
-											hflex="1"
-											selectedItems="@bind(vm.courseSelected)"
-											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-											class="listbox"
-											if="${vm.courseSelectionRequired}"
-											multiple="false"
-											checkmark="true" >
-											
-									        <listhead>
-									            <listheader width="25px"  valign="top" />
-									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="3" valign="top"/>
-									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" valign="top" />
-									            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" valign="top" />
-									            <listheader width="50px" align="center" valign="top" />
-									        </listhead>
-									         
-									        <template name="model" var="item" >
-									            <listitem style="${vm.getCourseRowColor(item)}" disabled="${item.fullOccupancy}" >
-									                <listcell></listcell>
-									                <listcell label="${item.name}" style="font-weight: bold;" />
-									                <listcell>
-									                	<vbox vflex="1" align="start" forEach="${item.lessonList}" >
-									                		<label value="${vm.getLessonToUi(each)}" />
-														</vbox>
-									                </listcell>
-									                <listcell label="${item.fullOccupancy ? c:l('txt.ui.common.occupied') : item.occupancy}" />
-									                <listcell>
-										                <vbox>
-															<!-- Popis -->
-										                	<a iconSclass="z-icon-info-circle" popup="descriptionPopup_${item.uuid}, position=after_end" style="font-size: large;" tooltiptext="${c:l('txt.ui.common.description2')}" />
-										                	<popup id="descriptionPopup_${item.uuid}">
-										                		<course-description course="${item}" />
-														    </popup>
-								                		</vbox>
-									                </listcell>
-									            </listitem>
-									        </template>
-									    </listbox>
-								    </vbox>
-							    </cell>
-							</row>
-						</rows>
-					</grid>
+					<include src="/pages/common/component/course-selection-grid.zul" />
 					
 					<!-- Ucastnik -->
 					<grid width="550px" sclass="form-grid" style="border: none;" >
