--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -39,121 +39,8 @@
 				<vlayout visible="@load(vm.editMode)" width="100%">	  
 				
 					<!-- Vyber kurzu -->
-                    <groupbox width="100%" sclass="no-inner-padding" if="${vm.courseSelectionRequired}">
-                        <caption label="${c:l('txt.ui.common.CourseSelection')}" />
-						
-						<!-- Vyber kurzu -->
-						<grid width="100%" if="${vm.courseSelectionRequired}" style="padding-bottom:10px;">
-							<rows>
-								<row if="${!vm.securedMode}" >
-									<cell   >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.SelectCourseLocation')}"/>
-											<!-- Vyber mista konani kurzu -->
-											<combobox model="@init(vm.courseLocationList)"
-												onSelect="@command('courseLocationSelectCmd')"
-												selectedItem="@bind(vm.courseLocationSelected)"
-												style="background: white;"
-												hflex="1"
-												focus="${vm.courseSelectionRequired}"
-												readonly="true"
-												if="${!vm.securedMode}" >
-												<template name="model">
-									            	<comboitem label="${each.name}"/>
-												</template>
-											</combobox>
-										</vbox>
-									</cell>
-								</row>
-								<row visible="@load(vm.courseList ne null and vm.courseList.isEmpty())"
-									if="${!vm.securedMode}" >
-									<!-- Nenalezen zadky kurz -->
-									<cell   >
-										<label value="${c:l('txt.ui.common.NoCourseFoundForLocation')}"/>
-									</cell>
-								</row>
-								<row visible="@load(!empty(vm.courseList))" >
-									<cell   if="${!vm.securedMode}" >
-										<vlayout hflex="1" sclass="listbox-wrapper">
-											<label value="${c:l('txt.ui.common.SelectCourse')}"/>
-											<!-- Verejna cast -->
-											<listbox model="@load(vm.courseList)" 
-												hflex="1"
-												sclass="listbox-400"
-												selectedItems="@bind(vm.courseSelected)"
-												multiple="false"
-												checkmark="true" >
-												
-										        <listhead>
-										            <listheader width="55px"  valign="top" />
-										            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="3" valign="top"/>
-										            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" valign="top" />
-										            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" valign="top" />
-										            <listheader width="70px" align="center" valign="top" />
-										        </listhead>
-										         
-										        <template name="model" var="item" >
-										            <listitem style="${vm.getCourseRowColor(item)}" visible="${!item.fullOccupancy}" >
-										                <listcell></listcell>
-										                <listcell label="${item.name}" style="font-weight: bold;" />
-										                <listcell>
-										                	<vbox vflex="1" align="start" forEach="${item.lessonList}" >
-										                		<label value="${vm.getLessonToUi(each)}" />
-															</vbox>
-										                </listcell>
-										                <listcell label="${item.fullOccupancy ? c:l('txt.ui.common.occupied') : item.occupancy}" />
-										                <listcell>
-											                <vbox>
-																<!-- Popis -->
-											                	<a iconSclass="z-icon-info-circle big-icon" popup="descriptionPopup_${item.uuid}, position=after_end" style="font-size: large;" tooltiptext="${c:l('txt.ui.common.description2')}" />
-											                	<popup id="descriptionPopup_${item.uuid}" >
-															    	<course-description course="${item}" />
-															    </popup>
-									                		</vbox>
-										                </listcell>
-										            </listitem>
-										        </template>
-										    </listbox>
-								    	</vlayout>
-									</cell>
-								</row>
-								
-								<row if="${vm.securedMode}">
-									<cell   >
-										<!-- Admin cast -->
-										<listbox model="@load(vm.courseList)" 
-											hflex="1"
-											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-											class="listbox"
-											visible="@load(vm.courseList ne null)"
-											>
-											
-									        <listhead>
-									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="2" />
-									            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(description)" align="left" hflex="3" />
-									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
-									            <listheader label="${c:l('txt.ui.common.Occupancy')}" align="center" hflex="min" />
-									        </listhead>
-									         
-									        <template name="model" var="item" >
-									            <listitem>
-									                <listcell label="${item.name}" />
-									                <listcell label="${item.courseLocation.name}" />
-									                <listcell>
-									                	<vbox vflex="1" align="center" forEach="${item.lessonList}" >
-									                		<label value="${vm.getLessonToUi(each)}"/>
-														</vbox>
-									                </listcell>
-									                <listcell label="${item.fullOccupancy ? c:l('txt.ui.common.occupied') : item.occupancy}" />
-									            </listitem>
-									        </template>
-									    </listbox>
-									</cell>
-								</row>
-							</rows>
-						</grid>
-                    </groupbox>
-						
+					<include src="/pages/common/component/course-selection-groupbox.zul" if="${vm.courseSelectionRequired}" />
+                    	
 					<!-- Zakonny zastupce -->
 					<groupbox hflex="1" sclass="no-inner-padding" if="${!vm.loggedByParticRepr}">
                         <caption label="${c:l('txt.ui.common.representative')}" />
