--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -81,43 +81,41 @@
 									</row>
 									<row>
 										<cell>
-											<vbox hflex="1">
-												<label value="${c:l('txt.ui.common.birthDate')}"/>
-												<datebox id="particBirthdate"
-													value="@bind(fx.participant.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
-				                            		format="@load(vm.dateFormat)" 
-				                            		maxlength="@load(vm.getDateMaxlength())"
-				                            		placeholder="*"
-				                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-				                            		readonly="@load(vm.isItemReadOnly())"
-				                            		buttonVisible="@load(!vm.isItemReadOnly())"
-				                            		tabindex="3" />
-												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
-															<label value="@bind(vmsgs[particBirthdate])" />
+											<hbox hflex="1">
+												<vbox hflex="1">
+													<label value="${c:l('txt.ui.common.birthDate')}"/>
+													<datebox id="particBirthdate"
+														value="@bind(fx.participant.courseParticipant.birthdate) @validator(vm.notNullObjectValidator)"
+					                            		format="@load(vm.dateFormat)" 
+					                            		maxlength="@load(vm.getDateMaxlength())"
+					                            		placeholder="*"
+					                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+					                            		readonly="@load(vm.isItemReadOnly())"
+					                            		buttonVisible="@load(!vm.isItemReadOnly())"
+					                            		tabindex="3" />
+													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
+																<label value="@bind(vmsgs[particBirthdate])" />
+															</span>
+													</hbox>
+												</vbox>
+												<vbox hflex="1" visible="@load(vm.isLoggedUserInRole('ADMIN'))">
+													<label value="${c:l('txt.ui.common.birthNumber')}"/>
+													<textbox id="particBirthNumber"
+														value="@bind(fx.participant.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
+					                            		maxlength="@load(vm.getBirthNumberMaxlength())"
+					                            		placeholder="*"
+					                            		sclass="form-input-text"
+					                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+					                            		tabindex="4"
+					                            		hflex="1" />
+													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
+															<label value="@bind(vmsgs[particBirthNumber])" />
 														</span>
-												</hbox>
-											</vbox>
-										</cell>
-									</row>
-									<row visible="@load(vm.isLoggedUserInRole('ADMIN'))" >
-										<cell sclass="form-grid-cell">
-											<vbox hflex="1">
-												<label value="${c:l('txt.ui.common.birthNumber')}"/>
-												<textbox id="particBirthNumber"
-													value="@bind(fx.participant.courseParticipant.personalNo) @validator(vm.birthNumberValidator, notNull=true)"
-				                            		maxlength="@load(vm.getBirthNumberMaxlength())"
-				                            		placeholder="*"
-				                            		sclass="form-input-text"
-				                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-				                            		tabindex="4"
-				                            		hflex="1" />
-												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
-														<label value="@bind(vmsgs[particBirthNumber])" />
-													</span>
-												</hbox>
-											</vbox>
+													</hbox>
+												</vbox>
+											</hbox>
 										</cell>
 									</row>
 									<row>
@@ -146,7 +144,8 @@
 											<vbox hflex="1">
 												<label value="${c:l('txt.ui.application.healthInfo')}"/>
 												<textbox rows="3" hflex="3" multiline="true"
-													value="@bind(fx.participant.courseParticipant.healthInfo)" tabindex="6"
+													value="@bind(fx.participant.courseParticipant.healthInfo)"
+													tabindex="6"
 													readonly="@load(vm.isItemReadOnly())"
 													sclass="form-input-textarea"
 													maxlength="@load(vm.getHealthInfoMaxlength())" />
@@ -156,10 +155,101 @@
 								</rows>
 							</grid>
 							
+							<groupbox width="100%" style="margin-top:20px;" >
+				                <caption hflex="1">
+				                    <label value="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"/>
+				                </caption>
+			                    <grid sclass="scb-form-grid-2" hflex="1">
+									<rows>
+										<row>
+											<cell>
+												<vbox hflex="1">
+													<label value="${c:l('txt.ui.common.street')}"/>
+													<textbox id="particStreet"
+														value="@bind(fx.participant.courseParticipant.contact.street)"
+														maxlength="240"
+														sclass="form-input-text"
+														tabindex="7"
+														hflex="1" />
+												</vbox>
+											</cell>
+										</row>
+										<row>
+											<cell>
+												<hbox hflex="1">
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.landRegNo')}"/>
+														<intbox id="particLandRegNo"
+															value="@bind(fx.participant.courseParticipant.contact.landRegistryNumber)"
+															maxlength="8"
+															placeholder="*"
+															constraint="no empty"
+															sclass="form-input-text"
+															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+															tabindex="6"
+															hflex="1" />
+													</vbox>
+													<vbox hflex="1">
+														<label value="${c:l('txt.ui.common.houseNo')}"/>
+														<intbox id="particHouseNo"
+															value="@bind(fx.participant.courseParticipant.contact.houseNumber)"
+															maxlength="6"
+															sclass="form-input-text"
+															tabindex="9"
+															hflex="1" />
+													</vbox>
+												</hbox>
+											</cell>
+										</row>
+										<row>
+											<cell sclass="form-grid-cell">
+												<vbox hflex="1">
+													<label value="${c:l('txt.ui.common.city')}"/>
+													<textbox id="particCity"
+														value="@bind(fx.participant.courseParticipant.contact.city) @validator(vm.notNullValidator)"
+														maxlength="240"
+														placeholder="*"
+														sclass="form-input-text"
+														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+														tabindex="10"
+														hflex="1" />
+													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particCity])" >
+															<label value="@bind(vmsgs[particCity])" />
+														</span>
+													</hbox>
+												</vbox>
+											</cell>
+										</row>
+										<row>
+											<cell sclass="form-grid-cell">
+												<vbox hflex="1">
+													<label value="${c:l('txt.ui.common.zipCode')}"/>
+													<textbox id="particZipCode"
+														value="@bind(fx.participant.courseParticipant.contact.zipCode) @validator(vm.notNullValidator)"
+														maxlength="32"
+														placeholder="*"
+														sclass="form-input-text"
+														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+														tabindex="11"
+														hflex="1" />
+													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
+														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particZipCode])" >
+															<label value="@bind(vmsgs[particZipCode])" />
+														</span>
+													</hbox>
+												</vbox>
+											</cell>
+										</row>
+									</rows>
+								</grid>
+				            </groupbox>
+				            
 							<hbox>
 								<vbox>
 									<button label="Uložit"
-										onClick="@command('submit')" 
+										onClick="@command('submit')"
+										tabindex="12" 
 										visible="@load(!vm.isItemReadOnly())"
 										iconSclass="z-icon-check" />
 								</vbox>
